--- a/public/index.html
+++ b/public/index.html
@@ -180,7 +180,7 @@
 
         #blogs {
             grid-area: blogs;
-            padding: 15px;
+            padding: 18px;
         }
 
         #blogs ul,
@@ -333,21 +333,14 @@
                     <h3><b>Company: Cognizant Technology Solutions Pvt Ltd. </b> </h3>
                     <strong>Position: Associate Level</strong>
                     <ul>
-                        <li>I Never cared about dressing. My wife suggested me to dress more professionally while I was
-                            attending my
-                            1st conference. I replied "non one knows me there". Later times I Replied "Everyone knows me
-                            there". So
-                            no one bothered about my dressing, As I never did</li>
-                        <li> When Albert Einstein was working at Princeton university, one day he was going back home he
-                            forgot his
-                            home address. The driver of the cab did not recognize him. Einstein asked the driver if he
-                            knows
-                            Einstein's home. The driver said "Who does not know Einstein's address? Everyone in
-                            Princeton knows. Do
-                            you want to meet him?. Einstein replied "I am Einstein. I forgot my home address, can you
-                            take me there?
-                            "The driver dropped him to his home and did not even collect his fare from him.</li>
+                        <li>I worked as an SAP Basis Consultant for 2.5 years as a role of production support. 
+                        <li>Our responsibilities typically include configuring, monitoring, tuning and troubleshooting the environment, as well as scheduling and running the TMS. SAP Basis consultants generally provide technical support and high-level leadership for SAP systems.</li>
+                        </li>
                     </ul>
+                    <strong>Tools Used:</strong>
+                    <ul><li>SAP ERP</li>
+                        <li>HANA STUDIO</li>
+                        <li>Visual Administrator, and NetWeaver Administrator tool</li></ul>
                 </div>
             </div>
 
