Latest changes done

--- a/public/index.html
+++ b/public/index.html
@@ -294,7 +294,7 @@
                 </div>
                 <div>
                     <div class="about_img_container">
-                        <img src="https://imageio.forbes.com/blogs-images/rainerzitelmann/files/2019/06/E0MG76-e1560965378507-1200x1270.jpg?format=jpg&width=960"
+                        <img src="myImage.jpg"
                             alt="My Pic">
                     </div>
                 </div>
@@ -305,9 +305,7 @@
                 <div>
                     <p>
                         I am <b>Aswini Muttineni</b> and pursuing my master's in Computer Science at University of
-                        NewHaven.This is my
-                        sample webpage creating to provide my interests and experience details.
-                    </p>
+                        NewHaven. I am committed to staying up-to-date on the latest industry trends and technologies, and I am always looking for new ways to improve my skills and knowledge. I hope that my passion for my interest and dedication to my profession will come through in my presentation and inspire you to pursue your own interests and goals.</p>
 
                 </div>
             </div>
