--- a/public/index.html
+++ b/public/index.html
@@ -294,7 +294,7 @@
                 </div>
                 <div>
                     <div class="about_img_container">
-                        <img src="myImage.jpg"
+                        <img src="https://media.istockphoto.com/vectors/color-people-formal-woman-icon-vector-id643538882?s=612x612"
                             alt="My Pic">
                     </div>
                 </div>
