--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>AswiniMuttineni_FinalProject</title>
     <script type="text/javascript" src="script.js"></script>
-    <script src="https://code.iconify.design/iconify-icon/1.0.0/iconify-icon.min.js"></script>
+    <script src="https://us.123rf.com/450wm/wikagraphic/wikagraphic2101/wikagraphic210102041/163075687-initial-logotype-letter-am-company-name-colored-blue-and-silver-swoosh-design-vector-logo-for.jpg?ver=6"></script>
     <style>
         body {
             font-size: 18px;
@@ -294,7 +294,7 @@
                 </div>
                 <div>
                     <div class="about_img_container">
-                        <img src="https://media.istockphoto.com/vectors/color-people-formal-woman-icon-vector-id643538882?s=850x990"
+                        <img src="https://us.123rf.com/450wm/wikagraphic/wikagraphic2101/wikagraphic210102041/163075687-initial-logotype-letter-am-company-name-colored-blue-and-silver-swoosh-design-vector-logo-for.jpg?ver=6"
                             alt="My Pic">
                     </div>
                 </div>
