--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>AswiniMuttineni_FinalProject</title>
     <script type="text/javascript" src="script.js"></script>
-    <script src="https://us.123rf.com/450wm/wikagraphic/wikagraphic2101/wikagraphic210102041/163075687-initial-logotype-letter-am-company-name-colored-blue-and-silver-swoosh-design-vector-logo-for.jpg?ver=6"></script>
+    <script src="https://code.iconify.design/iconify-icon/1.0.0/iconify-icon.min.js"></script>
     <style>
         body {
             font-size: 18px;
@@ -24,7 +24,7 @@
 
         .container {
             display: grid;
-            grid-template-columns: 1fr 1fr 1fr;
+            grid-template-columns: 0.5fr 1fr 1fr;
             grid-template-areas:
                 "topnav topnav topnav"
                 "aboutme info info"
